# idleMMOGrind

./: .gitignore  CLAUDE.md  README.md  electron-builder.yml  mcp.json  package.json  pnpm-lock.yaml  tsconfig.engine.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
.claude/agents/: idle-mmo-balance-sim.md  idle-mmo-gdev.md  (+5 more)
data/: balance.json  classes.json  materials.json  races.json
refs/: graphics_arts_tools_idea.md
tools/art-engine-v2/: .gitignore  pyproject.toml
tools/art-engine-v2/src/: __init__.py
tools/art-engine-v2/src/cli/: __init__.py  __main__.py  compose.py  generate.py  ingest.py
tools/art-engine-v2/src/core/: __init__.py  compositor.py  dither.py  noise.py  palette.py  primitives.py  seed.py
tools/art-engine-v2/src/data/: __init__.py
tools/art-engine-v2/src/data/manifests/: __init__.py  sample_weapons.json
tools/art-engine-v2/src/generators/: __init__.py  backgrounds.py  icons.py  sprites.py  tooltips.py  ui_chrome.py
tools/art-engine-v2/src/ingest/: __init__.py  background_remover.py  region_extractor.py  template_processor.py
tools/art-engine-v2/src/layout/: engine.py  schemas.py  text.py
tools/art-engine-v2/src/palettes/: __init__.py  game_palettes.py
tools/art-engine-v2/tests/: __init__.py  test_backgrounds.py  test_cli.py  test_compositor.py  test_dither.py  test_game_palettes.py  test_icons.py  test_ingest.py  test_layout.py  test_manifest.py  test_noise.py  test_palette.py  test_primitives.py  test_seed.py  test_sprites.py  test_text.py  test_tooltips.py  test_ui_chrome.py
(+253 files in other folders)
